# Abaqus-MarmotInterface

./: AbaqusMarmotHelper.h  CMakeLists.txt  README.md  abaqus_v6.env_gcc_compiler_linux  abaqus_v6.env_gcc_compiler_linux_2024  abaqus_v6.env_intel_compiler_linux  user.cpp  user2017.cpp  user_explicit.cpp
test/: fil_export_definition.inp  l_shaped_panel_cubit.jou  l_shaped_panel_test.inp  mesh.inp
